[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gear.png" type="Texture" id=1]
[ext_resource path="res://assets/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://general-ui/option-container.gd" type="Script" id=3]
[ext_resource path="res://general-ui/small-font.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="OptionContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpacityFilter" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="MarginContainer" parent="."]
margin_right = 82.0
margin_bottom = 82.0
custom_constants/margin_top = 32
custom_constants/margin_left = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ButtonContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 82.0
margin_bottom = 82.0

[node name="PauseButton" type="TextureButton" parent="ButtonContainer/CenterContainer"]
pause_mode = 2
margin_right = 50.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )

[node name="LabelContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 96.0
mouse_filter = 2
custom_constants/margin_top = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LabelContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 160.0
mouse_filter = 2

[node name="Label" type="Label" parent="LabelContainer/CenterContainer"]
margin_left = 392.0
margin_right = 632.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="MenuContainer" type="MarginContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -80.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MenuContainer"]
margin_right = 1024.0
margin_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/CenterContainer"]
margin_left = 272.0
margin_right = 752.0
margin_bottom = 160.0

[node name="MenuButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_right = 480.0
margin_bottom = 78.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = "Return to menu"
flat = true

[node name="UnpauseButton" type="Button" parent="MenuContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 82.0
margin_right = 480.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 4 )
text = "Return to game"
flat = true

[connection signal="pressed" from="ButtonContainer/CenterContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="MenuContainer/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="MenuContainer/CenterContainer/VBoxContainer/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
